--- a/BindingSample/Views/MainPage.xaml
+++ b/BindingSample/Views/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    x:Class="BindingSample.MainPage">
+    x:Class="BindingSample.Views.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
         <Label
