--- a/BindingSample/Views/MainPage.xaml
+++ b/BindingSample/Views/MainPage.xaml
@@ -4,10 +4,28 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:BindingSample.Views"
+    xmlns:sys="clr-namespace:System;assembly=netstandard"
     mc:Ignorable="d"
     x:Class="BindingSample.Views.MainPage">
-    <StackLayout>
-        <!-- Place new controls here -->
+
+    <ContentPage.Resources>
+        <sys:Int32 x:Key="EMPLOYEE_NO_LENGTH">4</sys:Int32>
+    </ContentPage.Resources>
+
+    <StackLayout
+        Padding="10,10,10,10">
+
+        <Entry
+            Placeholder="社員番号を入力してください"
+            MaxLength="{StaticResource EMPLOYEE_NO_LENGTH}"
+            TextChanged="OnEmployeeTextChanged"/>
+
+        <views:EmployeeView
+            x:Name="EmployeeDispArea"
+            BindingContext="{Binding CheckedEmployee.Value}"
+            />
+
         <Label
             Text="Welcome to Xamarin.Forms!"
             HorizontalOptions="Center"
