--- a/BindingSample/Views/GoOutListView.xaml
+++ b/BindingSample/Views/GoOutListView.xaml
@@ -11,7 +11,7 @@
                 Text="行き先履歴" />
             <StackLayout
                 Orientation="Vertical"
-                BindableLayout.ItemsSource="{Binding GoOuts}">
+                BindableLayout.ItemsSource="{Binding CheckedGoOuts}">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate>
                         <views:GoOutView/>
