--- a/BindingSample/Views/TeamView.xaml
+++ b/BindingSample/Views/TeamView.xaml
@@ -57,6 +57,15 @@
                                         FontSize="Micro"
                                         Text="リアクティブなので変化する。" />
 
+                                    <!--
+                                    状態のアイコン表示
+                                    StatusはBindingPropertyではないので{Binding ...}は使えない。
+                                    DataTrigerとかはどうかな？
+                                    -->
+                                    <views:StatusIconView
+                                        Status="Safe"
+                                        HorizontalOptions="End" />
+
                                     <Label
                                         Text="{Binding CanWork}" />
 
